<resources>
    <string name="app_name">Xplore Indonesia</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="xplore_background">This is a background text</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="jelajah">Jelajah</string>
    <string name="gallery">Gallery</string>
    <string name="xmart">Xmart</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="profil">profil</string>
    <string name="galeri">galeri</string>
    <string name="title_activity_jelajah">Jelajah</string>
    <string name="masuk">masuk</string>
    <string name="password">password</string>
    <string name="selamat_datang">selamat datang</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="username">username</string>
    <string name="daftar">daftar</string>
    <string name="title_activity_challenge">ChallengeActivity</string>
</resources>
