<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="435dp"
                app:srcCompat="@drawable/logo_minimized" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonGalllery"
                    android:layout_width="7dp"
                    android:layout_height="85dp"
                    android:layout_weight="1"
                    android:background="@drawable/main_menu_button_border"
                    android:drawableTop="@drawable/ic_gallery"
                    android:padding="10dp"
                    android:text="@string/galeri" />

                <Button
                    android:id="@+id/buttonJelajah"
                    android:layout_width="7dp"
                    android:layout_height="85dp"
                    android:layout_weight="1"
                    android:background="@drawable/main_menu_button_border"
                    android:drawableTop="@drawable/ic_bag"
                    android:padding="10dp"
                    android:text="@string/jelajah" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonProfile"
                    android:layout_width="7dp"
                    android:layout_height="85dp"
                    android:layout_weight="1"
                    android:background="@drawable/main_menu_button_border"
                    android:drawableTop="@drawable/ic_user"
                    android:padding="10dp"
                    android:text="@string/profil" />

                <Button
                    android:id="@+id/buttonXmart"
                    android:layout_width="7dp"
                    android:layout_height="85dp"
                    android:layout_weight="1"
                    android:background="@drawable/main_menu_button_border"
                    android:drawableTop="@drawable/ic_cart"
                    android:padding="10dp"
                    android:text="@string/xmart" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>